tests/baselines/reference/continueTarget5.errors.txt
==== tests/cases/compiler/continueTarget5.ts (1 errors) ====
    target:
    while (true) {
      function f() {
        while (true) {
          continue target;
          ~~~~~~~~~~~~~~~~
!!! error TS2204: Jump target cannot cross function boundary.
        }
      }
    }